--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Coutry select</title>
+  <title>Country select</title>
 </head>
 
 <body>
